syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";

service SystemCountryCode {
	rpc ReadSystemCountryCode (SystemCountryCodeCodeRequest) returns (SystemCountryCodePayload);
	//rpc GetAllSystemCountryCode (google.protobuf.Empty) returns (SecurityRolePayload);
	rpc CreateSystemCountryCode (SystemCountryCodePayload) returns (google.protobuf.Empty);
	rpc UpdateSystemCountryCode (SystemCountryCodePayload) returns (google.protobuf.Empty);
	rpc DeleteSystemCountryCode (SystemCountryCodePayload) returns (google.protobuf.Empty);
}

message SystemCountryCodeCodeRequest{
	string Code = 1;
}

message SystemCountryCodePayload {
	string Code = 1;
	string Name = 2;
}